# libnwrap

./: COPYRIGHT  Makefile.in  README  acconfig.h  aclocal.m4  configure  configure.in  mkinstalldirs
doc/: Makefile.in  README  libnwrap.texinfo
doc/man/CVS/: Entries  Root
examples/: Makefile.in  README  echosrv.c  simple.c  webcli.c
macros/: getaddrinfo.m4  gethostbyname_r.m4  ipv6.m4
src/: Makefile.in  config.h.in  error.c  nw_gethostaddr.c  nw_notify.c  nw_tman.c  nwbc.c  nwcrypt.c  nwhints.c  nwinit.c  nwio.c  nwopt.c  nwpconn.c  nwrap-int.h  nwrap.h
src/nw_getaddrinfo/: README  nw_abi.c  nw_check.c  nw_clone.c  nw_fport.c  nw_freeaddrinfo.c  nw_gai_strerror.c  nw_getaddrinfo.c  nw_getaddrinfo.h  nw_gethostbyname.c  nw_psrv.c  nw_srch.c  nw_unix.c
src/nw_getaddrinfo/CVS/: Entries  Repository
