dnl Process this file with autoconf to produce a configure script.

AC_INIT(src/nwinit.c)
AC_CONFIG_HEADER(src/config.h)

dnl Checks for programs 
AC_PROG_CC
AC_ISC_POSIX
AC_AIX

dnl Ckecks for libraries

dnl Checks for header files
AC_HEADER_STDC
AC_HEADER_DIRENT
AC_CHECK_HEADERS(pthread.h)

dnl Ckecks for typedefs

dnl Checks for structures

dnl Ckecks for compiler characteristics

dnl Checks for library functions
NW_GETADDRINFO
NW_GETHOSTBYNAME_R

dnl Ckecks for system services
NW_IPV6

AC_OUTPUT([
Makefile src/Makefile doc/Makefile examples/Makefile
])

